--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --noStackTrace --silent",
+    "live": "live-server",
+    "lint": "eslint src"
   },
   "jest": {
     "verbose": false,
     "setupFiles": [
       "./setup-jest.js"
+    ],
+    "setupFilesAfterEnv": [
+      "./setup-jest-after-env.js"
     ],
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
@@ -29,7 +34,13 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/user-event": "^12.0.11",
     "@types/jest": "^29.0.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "babel-jest": "^26.1.0",
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.6.4",
     "jest": "^26.1.0",
     "jest-environment-jsdom": "^27.4.6",
     "jest-html-reporter": "^3.1.3"
